--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_NAME=dynamicfusion
 SECRET_KEY=supersecretkey
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
-ADMIN_PASS=nou123
+ADMIN_PASS=nou123ងិត
